--- a/nova.css
+++ b/nova.css
@@ -1286,7 +1286,7 @@ i.icon-3cZ1F_.iconSearchBarClear-2DW-Kr.visible-3V0mGj {
 /* Name of Server */
 .header-2o-2hj {
   box-shadow: none;
-  color: #ff6600
+  color: #ff6600;
 }
 .popout-open .header-2o-2hj {
   background-color: transparent;
