--- a/nova.css
+++ b/nova.css
@@ -1040,6 +1040,7 @@ img.image-3XsqGc {
 /* Header of channel */
 .theme-dark .topic-2QX7LI:before {
   background-color: transparent;
+  color: #ff6600;
 }
 
 .iconInactive-g2AXfB {
