Updating .titleWrapper-1l0xT9 - #FF6600
Possible Fix for title / channel name color fix

--- a/nova.css
+++ b/nova.css
@@ -1037,6 +1037,12 @@ border-radius: 50px;
 img.image-3XsqGc {
   transform: scale(0.8);
 }
+
+/*Header Channel Name */
+.titleWrapper-1l0xT9
+color: #FF6600;!important
+}
+
 /* Header of channel */
 .theme-dark .topic-2QX7LI:before {
   background-color: transparent;
