.channelName-3stJzi UPDATE
#FF6600 - I think I fixed it woohoo

--- a/nova.css
+++ b/nova.css
@@ -1037,7 +1037,10 @@ border-radius: 50px;
 img.image-3XsqGc {
   transform: scale(0.8);
 }
-
+/* CHANNEL NAME COLOR */
+.channelName-3stJzi
+  color: #ff6600;!important
+}
 
 /* Header of channel */
 .theme-dark .topic-2QX7LI:before {
