--- a/nova.css
+++ b/nova.css
@@ -467,7 +467,7 @@ width: 99.5%;
   color: transparent !important;
 }
 .homeIcon-tEMBK1 {
-  background-image: https://cdn.discordapp.com/attachments/463532696820383754/489649105006493697/TheDWinkyFace.png;
+  background-image: https://cdn.discordapp.com/attachments/463532696820383754/489649105006493697/TheDWinkyFace.png!important;
   background-repeat: no-repeat;
   background-size: 45px;;
   background-position: center;
