--- a/nova.css
+++ b/nova.css
@@ -469,7 +469,7 @@ width: 99.5%;
 .homeIcon-tEMBK1 {
   background-image: https://cdn.discordapp.com/attachments/463532696820383754/489649105006493697/TheDWinkyFace.png!important;
   background-repeat: no-repeat;
-  background-size: 45px;;
+  background-size: 45px;
   background-position: center;
 }
 /* Forcing Servers to be round entire time */
