--- a/nova.css
+++ b/nova.css
@@ -8,7 +8,7 @@
 /* Background Boot Up BBU */
 @keyframes bbu {
 0% {
-  background-image: https://i.imgur.com/wN44Tkg.jpg;
+  background-image: var(--custombackground);
   opacity: 0.1;
   filter: blur(10px);
   background-repeat: var(--bgrepeat);
@@ -21,7 +21,7 @@
   height: 100%;
 }
 100% {
-  background-image: https://i.imgur.com/wN44Tkg.jpg;
+  background-image: var(--custombackground);
   opacity: var(--opacitybg);
   filter: blur(var(--blur));
   background-repeat: var(--bgrepeat);
@@ -59,7 +59,7 @@ background: transparent !important;
   animation: 5s bbu ease-in-out;
 }
 .backdrop-1wrmKB {
-  background-image: https://i.imgur.com/wN44Tkg.jpg;
+  background-image: var(--custombackground);
   opacity: var(--opacityDiscord) !important;
   filter: blur(var(--blur)) brightness(var(--opacitybg));
   background-repeat: var(--bgrepeat);
