--- a/nova.css
+++ b/nova.css
@@ -2187,3 +2187,17 @@ button#dl-log-button {
 textarea.textArea-2Spzkt.da-textArea.textAreaForm-18s4EO.textArea-2Spzkt.da-textAreaForm.da-textArea.scrollbarGhostHairline-1mSOM1.scrollbar-3dvm_9.da-scrollbarGhostHairline.da-scrollbar {
   margin-left: 115px;
 }
+
+
+/* Novas Edits */
+.inner-btChU7 .rtc-connection-status-connected {
+    color: #ff6600;
+}
+
+.inner-btChU7 .channel-SEolQq {
+  opacity: .9
+}
+
+.accountDetails-3k9g4n .discriminator {
+    opacity:.7
+}
