Timestamp color update

--- a/nova.css
+++ b/nova.css
@@ -2201,3 +2201,8 @@ textarea.textArea-2Spzkt.da-textArea.textAreaForm-18s4EO.textArea-2Spzkt.da-text
 .accountDetails-3k9g4n .discriminator {
     opacity:.7
 }
+
+.theme-dark .timestampCozy-2hLAPV {
+    color: #ffffff;
+    opacity: .8;
+}
