Updated Date stamp of messages in chat.

--- a/nova.css
+++ b/nova.css
@@ -2206,3 +2206,7 @@ textarea.textArea-2Spzkt.da-textArea.textAreaForm-18s4EO.textArea-2Spzkt.da-text
     color: #ffffff;
     opacity: .9;
 }
+
+.theme-dark .divider-3gKybi:not(.dividerRed-MKoLlr) .dividerContent-2L12VI {
+    color: #FF6600;
+}
