--- a/nova.css
+++ b/nova.css
@@ -2210,3 +2210,11 @@ textarea.textArea-2Spzkt.da-textArea.textAreaForm-18s4EO.textArea-2Spzkt.da-text
 .theme-dark .divider-3gKybi:not(.dividerRed-MKoLlr) .dividerContent-2L12VI {
     color: #FF6600;
 }
+
+.nameDefault-2s3kbY {
+    color: #FFFFFF;
+}
+
+.nameHovered-21k1eo .nameDefault-2s3kbY {
+    color: #FF6600;
+}
