I broke something - Testing Voice Chat activation colors

--- a/nova.css
+++ b/nova.css
@@ -2215,6 +2215,6 @@ textarea.textArea-2Spzkt.da-textArea.textAreaForm-18s4EO.textArea-2Spzkt.da-text
     color: #FFFFFF;
 }
 
-.nameHovered-21k1eo .nameDefault-2s3kbY {
+.nameHovered-21k1eo, .nameSpeaking-3UhoEZ {
     color: #FF6600;
 }
