Updating Playing game and profile header colors

--- a/nova.css
+++ b/nova.css
@@ -2218,3 +2218,12 @@ textarea.textArea-2Spzkt.da-textArea.textAreaForm-18s4EO.textArea-2Spzkt.da-text
 .nameHovered-21k1eo, .nameSpeaking-3UhoEZ {
     color: #FF6600;
 }
+
+.headerPlaying-j0WQBV {
+    background: #ff6600;
+}
+
+.activity-11LB_k {
+    background-color: #ff6600;
+    padding: 10px;
+}
