Updated Role titles in chat list

--- a/nova.css
+++ b/nova.css
@@ -2227,3 +2227,7 @@ textarea.textArea-2Spzkt.da-textArea.textAreaForm-18s4EO.textArea-2Spzkt.da-text
     background-color: #ff6600;
     padding: 10px;
 }
+
+.theme-dark .membersGroup-v9BXpm {
+    color: #ff6600;
+}
