--- a/nova.css
+++ b/nova.css
@@ -2235,3 +2235,8 @@ textarea.textArea-2Spzkt.da-textArea.textAreaForm-18s4EO.textArea-2Spzkt.da-text
 .theme-dark .headerNormal-T_seeN {
     background-color: #FF6600;
 }
+
+.theme-dark .topic-2QX7LI {
+    color: #ffffff;
+    opacity: .8;
+}
