fixed it - i think

--- a/nova.css
+++ b/nova.css
@@ -1133,7 +1133,7 @@ img.image-3XsqGc {
   border-radius: 5px;
 }
 .theme-dark .autocomplete-1vrmpx {
-  background-color: #696969;
+  background-color: #3D4849;
   opacity: 0.95;
 }
 /* Embeds */
