--- a/nova.css
+++ b/nova.css
@@ -2233,6 +2233,15 @@ textarea.textArea-2Spzkt.da-textArea.textAreaForm-18s4EO.textArea-2Spzkt.da-text
     background-color: #FF6600;
 }
 
+.headerTop-3C2Zn0 {
+    padding: 20px 10px;
+    background-color: #FF6600;
+}
+
+.headerTagWithNickname-3IthZD {
+    color: #FFFFFF;
+}
+
 .theme-dark .topic-2QX7LI {
     color: #ffffff;
     opacity: .8;
