--- a/nova.css
+++ b/nova.css
@@ -1339,7 +1339,7 @@ i.icon-3cZ1F_.iconSearchBarClear-2DW-Kr.visible-3V0mGj {
   color: transparent;
 }
 .unread-1Dp-OI {
-  background-color: white;
+  background-color: #FF6600;
   border-radius: 50px;
   height: 10px;
   left: 18px;
