Updating "Now Playing" status in user list color

--- a/nova.css
+++ b/nova.css
@@ -2246,3 +2246,11 @@ textarea.textArea-2Spzkt.da-textArea.textAreaForm-18s4EO.textArea-2Spzkt.da-text
     color: #ffffff;
     opacity: .8;
 }
+
+.activity-1IYsbk strong {
+    color: #FFFFFF;
+}
+
+.activityText-sLG0UL {
+    color: #ffffff;
+}
